added logo and meta tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="WaveSolution offers professional cleaning services in Sydney, Australia. Contact us for house cleaning, office cleaning, and more."
+    />
+    <meta
+      name="keywords"
+      content="Sydney cleaning services, house cleaning Sydney, office cleaning Sydney, professional cleaning Sydney, Australia cleaning services"
+    />
+
+    <!-- Open Graph Tags for Social Media -->
+    <meta
+      property="og:title"
+      content="WaveSolution - Sydney Cleaning Services"
+    />
+    <meta
+      property="og:description"
+      content="WaveSolution offers professional cleaning services in Sydney, Australia. Contact us for house cleaning, office cleaning, and more."
+    />
+    <meta property="og:image" content="images/giphy.gif" />
+    <meta property="og:url" content="https://wavesolution-one.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="WaveSolution" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="en_AU" />
+    <meta property="og:locale:alternate" content="en_GB" />
+    <meta property="og:locale:alternate" content="en_CA" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="WaveSolution - Sydney Cleaning Services"
+    />
+    <meta
+      name="twitter:description"
+      content="WaveSolution offers professional cleaning services in Sydney, Australia. Contact us for house cleaning, office cleaning, and more."
+    />
+    <meta name="twitter:image" content="/images/image_1.jpg" />
+
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="google-site-verification"
+      content="your-google-site-verification-code"
+    />
+    <meta name="msvalidate.01" content="your-bing-site-verification-code" />
+    <meta
+      name="yandex-verification"
+      content="your-yandex-site-verification-code"
+    />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="bingbot" content="index, follow" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="rating" content="general" />
+    <meta name="distribution" content="global" />
+    <meta name="subject" content="Cleaning Services in Sydney" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="language" content="EN" />
+    <meta name="author" content="WaveSolution" />
+    <title>WaveSolution</title>
+
+    <!-- //temporary solution need to fix the issue -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div id="root"></div>
